add @Override annotation, change to StringBuilder from StringBuffer and append instead of concatenate